--- a/package.json
+++ b/package.json
@@ -34,9 +34,18 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-simple-import-sort": "^10.0.0"
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "lint-staged": "^13.2.2"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --ext .tsx --ext .ts ./src --fix"
+    ],
+    "src/**": [
+      "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\""
+    ]
   }
 }
