--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": [
-    "node_modules", "babel.config.js", "metro.config.js"
-  ]
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js"]
 }
